<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    card_view:cardCornerRadius="5dp"
    card_view:cardElevation="4dp"
    card_view:cardUseCompatPadding="true">

    <LinearLayout
        android:id="@+id/list_layout"
        android:layout_width="match_parent"
        android:padding="8dp"
        android:layout_height="120dp"
        android:background="@android:color/holo_red_light"
        android:gravity="center_vertical"
        android:orientation="vertical"
        >


        <TextView
            android:id="@+id/textview_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:text="@string/list_detail"
            android:textColor="@color/colorWhite"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textview_latitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/list_latitude"
            android:textColor="@color/colorWhite"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textview_longitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/list_longitude"
            android:textColor="@color/colorWhite"
            android:textSize="16sp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textview_detail_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/list_addr"
                android:textColor="@color/colorWhite"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textview_details"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/list_details"
                android:textColor="@color/colorWhite"
                android:textSize="16sp" />


        </LinearLayout>


    </LinearLayout>


</android.support.v7.widget.CardView>